# soundplaneclient

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md
src/: CMakeLists.txt  Client.cpp  Client.h  ConsoleOutput.cpp  ConsoleOutput.h  Logging.cpp  Logging.h  MLDSPDeprecated.cpp  MLDSPDeprecated.h  MLModel.cpp  MLModel.h  MLParameter.cpp  MLParameter.h  MLProjectInfo.h  MLPropertySet.cpp  MLPropertySet.h  MLVectorDeprecated.cpp  MLVectorDeprecated.h  Output.h  SoundplaneModel.cpp  SoundplaneModel.h  Touch.h  TouchTracker.cpp  TouchTracker.h  Zone.cpp  Zone.h  ZoneSpec.cpp  ZoneSpec.h  main.cpp
